[gd_scene load_steps=2 format=3 uid="uid://ccgaybbckew53"]

[ext_resource type="Script" uid="uid://bdph20suqsj0" path="res://addons/gameAssetImporter/scenes/copyTool/scenes/githubProjects.gd" id="1_4b6kf"]

[node name="Github Projects" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 521.0
offset_top = 280.0
offset_right = -631.0
offset_bottom = -368.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4b6kf")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Msg" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="projectList" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
columns = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Inject project.godot:"

[node name="Inject" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
alignment = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "open on download"

[node name="OpenOnDownload" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
alignment = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BranchRequest" type="HTTPRequest" parent="."]

[node name="DownloadRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="BranchRequest" to="." method="_on_branch_request_request_completed"]
[connection signal="request_completed" from="DownloadRequest" to="." method="_on_download_request_request_completed"]
